NOISSUE - Implementation of Group removal (#161)
* add: group delete flow


* sync with master


* improved grpc error handling


* gofumpt -ed


* changed database unassign parent group id


* seperate event for delete group


* change group event name


* update channel remove events


* fix: channels event


* add: sdk, sdk_tet, cli


* fix: sdk mock


* mockery


* convert to inline case


* change in group delete flow


* change return error in delete


* add: openapi


* rename events: from channel delete to channel remove


---------
