# auth/api/grpc/server.go
@@ -540,11 +540,13 @@ func encodeError(err error) error {
 		err == apiutil.ErrMalformedPolicyAct:
 		return status.Error(codes.InvalidArgument, err.Error())
 	case errors.Contains(err, errors.ErrAuthentication),
+		errors.Contains(err, svcerr.ErrAuthentication),
 		errors.Contains(err, auth.ErrKeyExpired),
 		err == apiutil.ErrMissingEmail,
 		err == apiutil.ErrBearerToken:
 		return status.Error(codes.Unauthenticated, err.Error())
 	case errors.Contains(err, errors.ErrAuthorization),
+		errors.Contains(err, svcerr.ErrAuthorization),
 		errors.Contains(err, errors.ErrDomainAuthorization):
 		return status.Error(codes.PermissionDenied, err.Error())
 	case errors.Contains(err, errors.ErrNotFound):
